// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`type json schema diff visitor when provided with an array 1`] = `
Array [
  Object {
    "description": "'stringField' did not match schema",
    "example": Array [
      "1",
      "2",
      "3",
      true,
    ],
    "instancePath": "/stringField",
    "key": "stringField",
    "keyword": "type",
    "kind": "UnmatchedType",
    "propertyPath": "/properties/stringField",
  },
]
`;

exports[`type json schema diff visitor when provided with an object 1`] = `
Array [
  Object {
    "description": "'stringField' did not match schema",
    "example": Object {
      "field": "string",
    },
    "instancePath": "/stringField",
    "key": "stringField",
    "keyword": "type",
    "kind": "UnmatchedType",
    "propertyPath": "/properties/stringField",
  },
]
`;

exports[`type json schema diff visitor when provided with another primitive 1`] = `
Array [
  Object {
    "description": "'stringField' did not match schema",
    "example": 123,
    "instancePath": "/stringField",
    "key": "stringField",
    "keyword": "type",
    "kind": "UnmatchedType",
    "propertyPath": "/properties/stringField",
  },
]
`;

exports[`type json schema diff visitor when provided with null value 1`] = `
Array [
  Object {
    "description": "'stringField' did not match schema",
    "example": null,
    "instancePath": "/stringField",
    "key": "stringField",
    "keyword": "type",
    "kind": "UnmatchedType",
    "propertyPath": "/properties/stringField",
  },
]
`;
